[package]
name = "shelldb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
directories = "5"
rusqlite = { version = "0.32", features = ["uuid"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }

[profile.release]
codegen-units = 1
lto = true
